[package]
name = "rust_cookbook"
version = "0.1.0"
authors = ["Andy <andy@agrible.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.0"
rand_distr = "0.2.1"
clap = "2.33.0"
ansi_term = "0.12.1"
flate2 = "1.0.13"
tar = "0.4.26"
crossbeam = "0.7.3"
